H3CIPMSJAVA-20180830/src/objects/Service_City__c.object
<CustomObject>
    <fields>
        <fullName>Service_City__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>接受服务的城市</inlineHelpText>
        <label>被服务城市</label>
        <referenceTo>City__c</referenceTo>
        <relationshipLabel>Service City (服务城市)</relationshipLabel>
        <relationshipName>Service_CityToPurpose</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_City__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>提供服务的城市</inlineHelpText>
        <label>源城市</label>
        <referenceTo>City__c</referenceTo>
        <relationshipLabel>Service City</relationshipLabel>
        <relationshipName>Service_CityToSource</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Special_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>特殊服务</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>类别</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ISS</fullName>
                </value>
                <value>
                    <fullName>BCS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zone_Code__c</fullName>
        <label>Zone Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Zone1</fullName>
                </value>
                <value>
                    <fullName>Zone2</fullName>
                </value>
                <value>
                    <fullName>Zone3</fullName>
                </value>
                <value>
                    <fullName>Zone4</fullName>
                </value>
                <value>
                    <fullName>Zone5</fullName>
                </value>
                <value>
                    <fullName>Zone6</fullName>
                </value>
                <value>
                    <fullName>Zone7</fullName>
                </value>
                <value>
                    <fullName>Zone8</fullName>
                </value>
                <value>
                    <fullName>Zone9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Service City</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Zone_Code__c</columns>
        <columns>Service_City__c</columns>
        <columns>Type__c</columns>
        <columns>Special_Service__c</columns>
        <columns>Source_City__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SC-{0000}</displayFormat>
        <label>No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>